# Fabricdefect_ai

./: .gitignore  KPI_Plan.md  README.md  git  ionCrumble_VisionAI git reflog --all  package-lock.json
Backend/: env.example  pyproject.toml  requirements.txt
Backend/ai_experiments/mobilesam_test/: test_mobilesam.py
Backend/app/: __init__.py  main.py
Backend/app/api/v1/: annotations.py  generations.py  images.py  sam.py
Backend/app/core/: config.py  dependencies.py  roboflow_client.py  storage.py
Backend/app/db/: base.py  migrate.py  models.py  repository.py  session.py
Backend/app/db/migrations/: 001_add_roboflow_image_id.sql
Backend/app/ml/sam/: predictor.py
Backend/app/schemas/: annotation.py  generation.py  image.py
Backend/app/services/: annotation_service.py  generation_service.py  image_service.py  roboflow_service.py  sam_service.py
Backend/docs/: mobilesam-setup.md
Backend/scripts/: download_sam_weights.py  download_sam_weights.sh
Backend/tests/: test_annotations.py  test_generations.py  test_images.py  test_migration.py  test_sam.py
Synthetic_AI/: README.md
Synthetic_AI/1_input_data/: prompts.json
Synthetic_AI/2_training_real/images/: README.txt
Synthetic_AI/2_training_real/labels/: README.txt
Synthetic_AI/4_scripts/: auto_generate.py  download_model.py  requirements.txt  train_lora.py  train_yolo.py
Synthetic_AI/5_output_dataset/images/: README.txt
Synthetic_AI/6_yolo_sandbox/: dataset.yaml
docs/: ARCHITECTURE.md
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx
(+21 files in other folders)
