[project]
name = "crumb-studio-backend"
version = "0.1.0"
description = "Crumb Studio AI backend - single-page synthetic defect generation MVP"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "sqlalchemy==2.0.35",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "python-multipart==0.0.9",
    "Pillow==10.4.0",
    "psycopg2-binary==2.9.9",
    "torch==2.4.1",
    "torchvision==0.19.1",
    "numpy==1.26.4",
]

[project.optional-dependencies]
dev = ["pytest==8.3.3", "httpx==0.27.2"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"